--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,23 @@
-Julia 1.0:
+.julia_build_and_test:
   image: julia:1.0
   script: julia --project='@.' -e 'using Pkg; Pkg.build(); Pkg.test(; coverage=true)'
   coverage: /Test Coverage (\d+\.\d+%)/
   after_script:
     - julia -e 'using Printf; using Pkg; Pkg.add("Coverage"); using Coverage; c, t = get_summary(process_folder()); @printf "Test Coverage %.2f%%\n" 100c/t'
+
+Julia 1.0:
+  extends: .julia_build_and_test
+  image: julia:1.0
+
+Julia 1.4:
+  extends: .julia_build_and_test
+  image: julia:1.4
+
 pages:
   image: julia:1.0
   stage: deploy
+  before_script:
+    - apt update -y && apt install -y git
   script:
     - julia --project=docs -e '
           using Pkg;
