--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@
   coverage: /Test Coverage (\d+\.\d+%)/
   after_script:
     - julia -e 'using Printf; using Pkg; Pkg.add("Coverage"); using Coverage; c, t = get_summary(process_folder()); @printf "Test Coverage %.2f%%\n" 100c/t'
+    - bash <(curl -s https://codecov.io/bash) 
 
 Julia 1.0:
   extends: .julia_build_and_test
