--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,7 @@
   script: julia --project='@.' -e 'using Pkg; Pkg.build(); Pkg.test(; coverage=true)'
   coverage: /Test Coverage (\d+\.\d+%)/
   after_script:
-    - julia -e 'using Printf; using Pkg; Pkg.add("Coverage"); using Coverage; c, t = get_summary(process_folder()); @printf "Test Coverage %.2f%%\n" 100c/t'
-    - bash <(curl -s https://codecov.io/bash) 
+    - julia -e 'using Printf; using Pkg; Pkg.add("Coverage"); using Coverage; c, t = get_summary(process_folder()); @printf "Test Coverage %.2f%%\n" 100c/t; Codecov.submit(Codecov.process_folder())'
 
 Julia 1.0:
   extends: .julia_build_and_test
