--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 .julia_build_and_test:
   image: julia:1.0
-  script: julia --project='@.' -e 'using Pkg; Pkg.build(); Pkg.test(; coverage=true)'
+  script:
+    - julia --project='@.' -e 'using Pkg; Pkg.build(); Pkg.test(; coverage=true)'
+    - julia --project=test/coverage -e 'import Pkg; Pkg.instantiate()'
+    - julia --project=test/coverage test/coverage/coverage-summary.jl
   coverage: /Test Coverage (\d+\.\d+%)/
-  after_script:
-    - julia -e 'using Printf; using Pkg; Pkg.add("Coverage"); using Coverage; c, t = get_summary(process_folder()); @printf "Test Coverage %.2f%%\n" 100c/t; Codecov.submit_local(process_folder())'
 
 Julia 1.0:
   extends: .julia_build_and_test
